dropping commons-lang